# audacity-scripting

./: .gitignore  CONTRIBUTING.md  Dockerfile  JOURNEY.md  MANIFEST.in  Makefile  README.md  audacity.cfg  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-latest.yml  readme.yml  release-test.yml  release.yml  replacer.yml  test.yml
libs/go/src/audacity_pipe/: go.mod  main.go
libs/go/src/audacity_pipe/core/: core.go
libs/go/src/audacity_pipe/greet/: greet.go
scripts/: audacity_pipetest.py  init_audacity.ps1  pipe_test.py  pywin32_pipe_test.py  verify_checksum.py
src/audacity_scripting/: __main__.py
src/audacity_scripting/bridge/: clip.py  pipe.py  project.py  wrappers.py
src/audacity_scripting/cli/: cli.py  config.py
src/audacity_scripting/core/: app.py
src/audacity_scripting/utils/: enums.py  logger.py  version.py
tests/: test_wrappers.py
tests/data/: 1.aup3
tests/data/expected/: 1.expected.add_labels_to_clips.aup3  1.expected.aup3
tests/data/input/: 1.aup3
