### Change according to your package's requirements ------------------
[options]
python_requires = ~=3.6
setup_requires =
    wheel>=0.35.1
    setuptools>=50.3.2
install_requires =
    click>=7.1.2
    pywin32 >= 1.0;platform_system=='Windows'
### ------------------------------------------------------------------



### Keep the same structure, Should NOT be changed
### Remember - create __init__.py in each directory that is a package
# [options] <--- we're here
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src
### ------------------------------------------------------------------



### Relevant for packages that can be executed in command-line
### If your package does NOT support command-line, remove this section
[options.entry_points]
console_scripts =
    audacity_scripting = audacity_scripting.__main__:main
### ------------------------------------------------------------------



### Change according to your package's metadata ----------------------
[metadata]
name = audacity_scripting
author = Meir Gabay
license = MIT
author_email = unfor19@gmail.com
url = https://github.com/unfor19/audacity-scripting
project_urls = 
    Documentation = https://github.com/unfor19/audacity-scripting
### ------------------------------------------------------------------

### SEO details as will appear in PyPi -------------------------------
# [metadata] <--- we're here
description = Audacity Scripting - Python package for automating Audacity
long_description_content_type = text/markdown
long_description = file: README.md
keywords =
    python
    audacity
    scripting
    automation
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
### ------------------------------------------------------------------
